# TaxNow24

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/cpp/taxnow24/: statecontroller.cpp  statecontroller.h
backend/cpp/tests/: test_statecontroller.cpp
backend/java/: README.md  pom.xml
backend/java/src/main/java/io/taxnow24/backend/: StateController.java  StatesResponse.java  TaxCalculatorApplication.java
backend/java/src/test/java/io/taxnow24/backend/: StateControllerTest.java  TaxCalculatorApplicationTests.java
backend/kotlin/: Dockerfile  README.md  pom.xml
backend/kotlin/src/main/kotlin/com/gropyus/interviews/taxcalculator/: StateController.kt
backend/kotlin/src/main/kotlin/io/taxnow24/backend/: StateController.kt  TaxCalculatorApplication.kt
backend/kotlin/src/test/kotlin/io/taxnow24/backend/: StateControllerTest.kt  TaxCalculatorApplicationTests.kt
backend/nodejs/: README.md  package-lock.json  package.json
backend/nodejs/taxnow24/: app.js
backend/nodejs/taxnow24/routes/: state.js  state.test.js
backend/python/: README.md
backend/python/tests/: test_state_controller.py
datalake/: .gitignore  README.md
docs/: architecture.excalidraw  eventbridge-architecture.excalidraw  screens.excalidraw
eventbridge/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
eventbridge/eventbridge/: __init__.py  consumer.py  datalake.py  main.py  producer.py
eventbridge/tests/integration/: test_datalake.py
eventbridge/tests/integration/resources/: raw.csv
eventbridge/tests/unit/: test_datalake.py
frontend/: .eslintrc.js  README.md  package.json
frontend/public/: index.html
frontend/src/: App.module.css  App.test.tsx  App.tsx  CreateState.test.tsx  CreateState.tsx  TopBar.test.tsx  TopBar.tsx  UpdateState.module.css  UpdateState.test.tsx  UpdateState.tsx  index.tsx
jobs/: Dockerfile  Makefile  README.md  pyproject.toml
jobs/jobs/: __init__.py  main.py  spark_settings.py  user_aggregation.py
jobs/python/: README.md
jobs/python/jobs/: event_listing.py  event_partitioning.py  run_event_partitioner.py  run_top_10_users.py
jobs/python/tests/integration/: test_event_listing.py  test_event_partioning.py
jobs/python/tests/unit/: test_event_partitioning.py
jobs/scala/: build.sbt
jobs/tests/: __init__.py
jobs/tests/integration/fixtures/: dataset.csv  simple_dataset.csv
jobscheduler/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
jobscheduler/jobscheduler/: airflow.cfg  airflow.db  main.py  standalone_admin_password.txt
